--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="game-container">
         <h1 class="game-title">Guess the Number! 🎲</h1>
         <h2>Please refresh the page to play again💕</h2>
+        <footer><p>Contact me at prahladpatidar822@gmail.com</p></footer>
     <script src="app.js"></script>
 </body>
 </html>
