--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Guessing Game</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-app-pub-4463234519128204/2016335690"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="game-container">
@@ -15,3 +17,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
