--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
         <h1 class="game-title">Guess the Number! 🎲</h1>
         <h2>Please refresh the page to play again💕</h2>
         <footer><p>Contact me at prahladpatidar822@gmail.com</p></footer>
+        <ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-app-pub-4463234519128204/2016335690"
+     data-ad-slot="YYYYYYYYYY"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <script src="app.js"></script>
 </body>
 </html>
+
 
